Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52216

Despite allowing access to the camera and microphone the MediaStreamTrack.getSources web API does not give access to the label on the javascript side

    XMLWordPrintable

Details

    • 3e9a6407bbbc5f83eb8bd56c5c1d899dba9bc56f

    Description

      Despite allowing access to the camera and microphone the MediaStreamTrack.getSources web API does not give access to the label on the javascript side. This happens with https://simpl.info/getusermedia/sources/. It is easy to see if the page is inspected, putting a breakpoint on main.js:13 allows you to see what label for SourceInfo is set to. When doing this in Chrome it is set to the right label, but not when it is done via QtWebEngine

      Attachments

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: