Implement CheckMediaAccessPermission

Fixes access of label of MediaStream tracks

Also fixes the logged error:
WebContentsDelegate::CheckMediaAccessPermission: Not supported.

Change-Id: I3fee9ccd9e8b2e5cbd6b707336cc61425a44ba31
Task-number: QTBUG-52216
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>