src/core/browser_context_adapter.h
@@ -127,6 +127,8 @@ public:
         GeolocationPermission = 1,
 // Reserved:
 //        NotificationPermission = 2,
+        AudioCapturePermission = 3,
+        VideoCapturePermission = 4,
     };
 
     HttpCacheType httpCacheType() const;
@@ -152,6 +154,7 @@ public:
     UserScriptControllerHost *userScriptController();
 
     void permissionRequestReply(const QUrl &origin, PermissionType type, bool reply);
+    bool checkPermission(const QUrl &origin, PermissionType type);
 
     QString httpAcceptLanguageWithoutQualities() const;
     QString httpAcceptLanguage() const;
