src/core/permission_manager_qt.h
@@ -54,6 +54,7 @@ public:
     typedef BrowserContextAdapter::PermissionType PermissionType;
 
     void permissionRequestReply(const QUrl &origin, PermissionType type, bool reply);
+    bool checkPermission(const QUrl &origin, PermissionType type);
 
     // content::PermissionManager implementation:
     void RequestPermission(
